...
      'Q8',
      'TT',
      'R8',
      'e-tron',
      'e-tron GT',
    ],
    'BMW': [
      '1er',
      '2er',
      '3er',
      '4er',
      '5er',
      '6er',
...
      '8er',
      'X1',
      'X2',
      'X3',
      'X4',
      'X5',
      'X6',
      'X7',
      'Z4',
      'i3',
      'i4',
      'i5',
      'i7',
...
