...
                      ),
                    const SizedBox(width: 13),
                    Expanded(
                      child: Text(
                        widget.isLoading
                            ? 'Prüfung läuft...'
                            : 'Anfrage prüfen',
                        textAlign: TextAlign.center,
                        maxLines: 1,
                        overflow: TextOverflow.ellipsis,
                        style: Theme.of(context).textTheme.titleMedium
                            ?.copyWith(
                              color: Colors.white,
...
